--- a/data.qmd
+++ b/data.qmd
@@ -52,3 +52,46 @@
 See @tbl-letters.
 
 ## Missing value analysis
+
+
+```{r, warning = FALSE, message = FALSE}
+library(tidyverse)
+library(lubridate)
+
+nashville <- readRDS('Datasets/yg821jf8611_tn_nashville_2020_04_01.rds')
+na_rate <- data.frame("Variable" = colnames(nashville), 
+                "na_prop" = sapply(nashville, function(y) sum(length(which(is.na(y))))) / nrow(nashville)) |> 
+  arrange(na_prop)
+
+na_rate |> 
+  mutate(Variable = factor(Variable, levels = na_rate$Variable)) |> 
+  ggplot(aes(x = Variable, y = na_prop)) +
+  geom_col() +
+  coord_flip() + 
+  labs(y = "Proportion of NA's ") + 
+  ggtitle("Proportion of NA Values by Variable")
+```
+
+```{r, warning = FALSE, message = FALSE}
+nashville |> 
+  mutate(year = year(date)) |> 
+  select(year, raw_misd_state_citation_issued, raw_written_warning_issued, zone,
+         precinct, reporting_area, lat, lng) |> 
+  group_by(year) |> 
+  summarise_each(list(na_count = ~mean(is.na(.)))) |> 
+  pivot_longer(!year) |> 
+  mutate(name = sub("_na_count$", "", name)) |> 
+  ggplot(aes(x = name, y = value, fill = name)) + 
+  geom_col() +
+  coord_flip() +
+  labs(y = "Proportion of NA's", x = "Variable") + 
+  ggtitle("Proportion of NA's Faceted by Year")+
+  facet_wrap(~year) +
+  theme(axis.text.y=element_blank(),
+        axis.ticks.y=element_blank(),
+        legend.position="bottom") +
+  scale_y_continuous(breaks = c(0, .5, 1),
+    labels = c('0', '0.5', '1'))
+```
+
+
