--- a/data.qmd
+++ b/data.qmd
@@ -84,7 +84,7 @@ We plan to touch on several research areas using our data:
 ## Missing value analysis
 
 
-```{r, warning = FALSE, message = FALSE}
+```{r, warning = FALSE, message = FALSE, fig.height=8}
 library(tidyverse)
 library(lubridate)
 
@@ -99,7 +99,8 @@ na_rate |>
   geom_col() +
   coord_flip() + 
   labs(y = "Proportion of NA's ") + 
-  ggtitle("Proportion of NA Values by Variable")
+  ggtitle("Proportion of NA Values by Variable") +
+  theme_bw(13)
 ```
 
 The majority of features have very few or zero missing values. We see that there are four columns (search_basis, contraband_weapons, contraband_found, notes) with a very high percentage of missing values (>75%). This is likely due to officers not taking records in these columns, so we will not consider these four features in our analysis moving forward. 
@@ -119,14 +120,16 @@ nashville |>
   labs(y = "Proportion of NA's", x = "Variable") + 
   ggtitle("Proportion of NA's Faceted by Year")+
   facet_wrap(~year) +
+  theme_bw(13) + 
   theme(axis.text.y=element_blank(),
         axis.ticks.y=element_blank(),
         legend.position="bottom") +
   scale_y_continuous(breaks = c(0, .5, 1),
-    labels = c('0', '0.5', '1'))
+    labels = c('0', '0.5', '1')) 
 ```
 
 To further analyze trends in missing values, we faceted the percent of missing values by year for a few of the variables with a most number of missing values after excluding the four variables discussed above. We see that in 2017-2019, there is no data for raw_written_warning_issued, and from 2010-2011 the column raw_misd_state_citation_issued is mostly empty. This may be due to changes in notation over time. 
 
-With the fact that there are over three million rows in mind, we decide to subset our data to a more manageable size. Since the years 2012-2016 have the cleanest data in general, we decided to subset these years for our research going forward. Our subsetted data has 1924464 rows.
+With the fact that there are over three million rows in mind, we decide to subset our data to 2014 only for a more manageable size. Our subsetted data has 413,114 rows. 
+
 
