--- a/conclusion.qmd
+++ b/conclusion.qmd
@@ -1,1 +1,6 @@
 # Conclusion
+
+This dataset had multiple interesting features. It was possible to plot graphs to find some trends by race, age, and sex to determine whether or not a certain category is more subject to a stop by cops in Nashville, Tennessee.
+For example, it is clearly observable that blacks are usually more likely to be arrested or searched compared to other races. Additionally, females are less stopped compared to males, and it seems that cops are more lenient towards the elderly, who are more warned than arrested than their younger peers.
+However, determining whether these unbiased facts are resulting from objective judgmental decisions by the cops is another story.
+To go further, it would be interesting to conduct a demographical and social analysis of the Nashville population to conclude whether young black males or people from district 6 are usually worse drivers or if there are simply more cops targeting this category of individuals from a biased viewpoint.
